<?xml version="1.0"?>
<package format="3">
    <name>graph_msf_ros2</name>
    <version>0.0.0</version>
    <description>
        State estimation based on factor graphs, utilizing GTSAM functionality. Fusion of IMU, LiDAR Mapping Odometry
        and GNSS estimates.
    </description>
    
    <maintainer email="nubertj@ethz.ch">Julian Nubert</maintainer>
    <license>BSD</license>
    <author email="nubertj@ethz.ch">Julian Nubert</author>
    
    <!-- Build dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    
    <depend>rclcpp</depend>
    <depend>graph_msf</depend>
    <depend>kdl_parser</depend>
    <depend>nav_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <!-- <depend>tf2_geometry_msgs</depend> -->
    <depend>urdf</depend>
    <depend>eigen_colcon</depend>
    <depend>tf2_eigen</depend>
    <depend>graph_msf_ros2_msgs</depend>

    <!-- Run dependencies -->
    <exec_depend>python3</exec_depend>

    <!-- Testing dependencies (if needed) -->
    <test_depend>ament_cmake_pytest</test_depend>
    <test_depend>rosbag2_py</test_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>
</package>
