<?xml version="1.0"?>
<package format="3">
  <name>graph_msf_ros2_msgs</name>
  <version>1.0.0</version>
  <description>Messages used by graph_msf</description>

  <license>Proprietary</license>
  <url type="website">https://bitbucket.org/leggedrobotics/compslam_se</url>
  <maintainer email="waibelg@leggedrobotics.com">Gabriel Waibel</maintainer>
  <author email="waibelg@leggedrobotics.com">Gabriel Waibel</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
